--- a/css/style.css
+++ b/css/style.css
@@ -124,23 +124,20 @@ a:hover, a:active, a:focus {
 
 .section-title {
   margin: 0;
-  padding-bottom: 32px;
-}
-
-#about, #work,
-#contact {
-  position: relative;
-  padding-top: 80px;
-  padding-bottom: 80px;
 }
 
 #about img, #team img {
   border-radius: 5px;
 }
 
-#work {
+#about, #work, #projects, #services,
+#contact{
   border-top: 1px solid #f0f0f0;
   border-bottom: 1px solid #f0f0f0;
+}
+#about, #work, #projects, #services, #news,
+#contact{
+  padding-bottom: 50px;
 }
 
 #contact {
@@ -313,7 +310,6 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #about .section-title {
-  padding-bottom: 16px;
 }
 
 #about .col-md-4 a {
@@ -330,7 +326,6 @@ a:hover, a:active, a:focus {
 #about .about-thumb strong {
   font-weight: normal;
   display: block;
-  padding-top: 4px;
 }
 
 
@@ -371,24 +366,12 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #work .work-thumb {
-  border-radius: 5px;
-  margin-bottom: 15px;
-  padding: 0;
-  overflow: hidden;
-  position: relative;
-  top: 0;
-  -webkit-transition: all ease-in-out 0.4s;
-  transition: all ease-in-out 0.4s;
 }
 
 #work .work-thumb:hover {
-  background: #ffffff;
-  box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
-  top: -5px;
 }
 
-#work .work-thumb img {
-  border-radius: 5px;
+#work .work-thumb img { 
 }
 
 
@@ -498,7 +481,6 @@ a:hover, a:active, a:focus {
  h1 {font-size: 33px;}
 
  #work .work-thumb {
-  margin-top: 30px;
  }
 
 }
